# 42_Python_Piscine

./: .gitignore
p00/ex1/: ft_plot_area.py
p00/ex2/: ft_harvest_total.py
p00/ex4/: ft_water_reminder.py
p00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
p00/ex6/: ft_garden_summary.py
p00/ex7/: ft_seed_inventory.py
p01/ex0/: ft_garden_intro.py
p01/ex1/: ft_garden_data.py
p01/ex2/: ft_plant_growth.py
p01/ex3/: ft_plant_factory.py
p01/ex4/: ft_garden_security.py
p01/ex5/: ft_plant_types.py
p01/ex6/: ft_garden_analytics.py
p02/ex0/: ft_first_exception.py
p02/ex1/: ft_different_errors.py
p02/ex2/: ft_custom_errors.py
p02/ex3/: ft_finally_block.py
p02/ex4/: ft_raise_errors.py
p02/ex5/: ft_garden_management.py
p03/ex0/: ft_command_quest.py
p03/ex1/: ft_score_analytics.py
p03/ex2/: ft_coordinate_system.py
p03/ex3/: ft_achievement_manager.py
p03/ex4/: ft_inventory_system.py
p03/ex5/: ft_data_stream.py
p03/ex6/: ft_analytics_dashboard.py
p04/ex0/: ft_ancient_text.py
p04/ex1/: ft_archive_creation.py
p04/ex2/: ft_stream_management.py
p04/ex3/: ft_vault_security.py
p04/ex4/: ft_crisis_response.py
p05/ex0/: stream_processor.py
p05/ex1/: data_stream.py
p05/ex2/: nexus_pipeline.py
p06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
p06/alchemy/: potions.py
p07/ex0/: Card.py  CreatureCard.py  main.py
p07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
p07/ex2/: EliteCard.py  main.py
p08/ex01/: loading.py  pyproject.toml  requirements.txt
(+25 files in other folders)
