[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Loading programs into the construct"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"